Header tag added

--- a/miniProject.html
+++ b/miniProject.html
@@ -34,7 +34,7 @@
 </style>
 
 <body>
-
+<header>
     <nav>
         <ul>
             <li> <a href="">HOME</a></li>
@@ -45,6 +45,7 @@
 
         </ul>
     </nav>
+</header>
     <h1>Welcome To Our FLight Booking website</h1>
 
     <!-- <h2>Flight Booking Website</h2> -->
