--- a/html_mini1/miniProject.html
+++ b/html_mini1/miniProject.html
@@ -61,7 +61,7 @@
         <button type="submit">search</button>
         <br>
         <br>
-        <img style="width: 100%;" src="assets/images/flight.jpg" alt=" This is a plane image">
+        <img style="width: 100%;" src="../assets/images/flight.jpg" alt=" This is a plane image">
         <br><br>
 
  <!-- Flight Table -->
@@ -157,17 +157,17 @@
                 <h2>Popular Destination To Explore</h2>
                 <ul>
                     <li><a href="">Hyderabad</a></li>
-                    <img src="assets/images/hyderabad.jpg" alt="">
+                    <img src= "../assets/images/hyderabad.jpg" alt="">
                     <li><a href="">Qatar</a></li>
-                    <img src="assets/images/qatar.webp" alt="">
+                    <img src="../assets/images/qatar.webp" alt="">
                     <li><a href="">Delhi</a></li>
-                    <img src="assets/images/Delhi.jpg" alt="">
+                    <img src="../assets/images/Delhi.jpg" alt="">
                     <li><a href="">USA </a></li>
-                    <img src="assets/images/Usa.webp" alt="">
+                    <img src="../assets/images/Usa.webp" alt="">
                     <li><a href="">Canada</a></li>
-                    <img src="assets/images/canada.jpg" alt="">
+                    <img src="../assets/images/canada.jpg" alt="">
                     <li><a href="">Saudi</a></li>
-                    <img src="assets/images/saudi.webp" alt="">
+                    <img src="../assets/images/saudi.webp" alt="">
 
                 </ul>
             </div>
