nested lists added

--- a/Html_mini2.html/index.html
+++ b/Html_mini2.html/index.html
@@ -73,7 +73,7 @@
         <audio src="audio/space-atmospheric-background-124841.mp3" controls></audio> <br> <br>
 
         <h2>Google Maps </h2>
-        <iframe src="https://www.google.com/maps/@17.4358528,78.462976,12z?entry=ttu "></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7616.605669834817!2d78.46996044999999!3d17.349154950000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb97f132260af7%3A0x59b591344de3ad7!2sShalibanda%2C%20Hyderabad%2C%20Telangana!5e0!3m2!1sen!2sin!4v1693492951527!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <aside>
             <h2>Aside</h2>
@@ -113,7 +113,35 @@
 
     </section>
 
-
+<section class="lists">
+    <h2>Nested Lists</h2>
+            <ul>
+                <li>Andromeda Galaxy.</li>
+                <li>Canis Major Dwarf Galaxy.</li>
+                <li>Cygnus A.</li>
+                <li>Maffei I and II.</li>
+                 <br>
+                    <ul>
+                        <li>Magellanic Clouds.</li>
+                        <li>Milky Way Galaxy.</li>
+                        <li>Virgo A.</li>
+                    </ul>
+                 
+            </ul>
+            <ul>
+                <li>Andromeda Galaxy.</li>
+                <li>Canis Major Dwarf Galaxy.</li>
+                <li>Cygnus A.</li>
+                <li>Maffei I and II.</li>
+                 <br>
+                    <ul>
+                        <li>Magellanic Clouds.</li>
+                        <li>Milky Way Galaxy.</li>
+                        <li>Virgo A.</li>
+                    </ul>
+                 
+            </ul>
+</section>
     <section class="Table">
 
 
